Updated navbar styles and text content

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <!-- timelines wrapper -->
     <section class="grid-entrance">
       <h1>Before You Begin!</h1>
-      <p class="warning-box">This is a demo for developers whose main development focus is display ads. This is an uncommon topic for most of the front end developers. If you're not working for a digital publisher, I can't say there is much for you here, sadly. So here is a good place to decide leaving and finding something funnier to read for yourself!</p>
+      <p class="warning-box">This is a demo for developers whose main development focus is display ads. This is an uncommon topic for most of the front end developers. If you're not working for a digital publisher, I can't say there is much for you here, ... sadly. So here is a good place to decide leaving and finding something funnier to read for yourself!</p>
       <hr>
       <p><b>Ad Blocker Users</b>: You should always be using ad/tracker blockers. <u>But just for this demo you must disable ad blockers temporarily</u>. Because this demo is all about ads.</p>
       <p><b>Users Without Ad Blocker</b>: You should definitely use an ad/tracker blocker for personal stuff! See some starter <a href="#privacy-matters">links</a> at the end of the page.</p>
@@ -61,7 +61,7 @@
     <!-- main content -->
     <main class="grid-main">
       <h1>GPT Events</h1>
-      <p>From requesting ads to counting them as impressions, <abbr title="Google Publisher Tools">GPT</abbr> library triggers various events to inform page about current slot statuses. GPT options <code>enableSingleRequest</code> and <code>enableLazyLoad</code> change event triggering times in various ways.</p>
+      <p>From requesting ads to counting them as impressions, <abbr title="Google Publisher Tools">GPT</abbr> library triggers various events to inform page about current slot statuses. GPT options <code>enableSingleRequest</code> and <code>enableLazyLoad</code> change event triggering times in various ways. Try different setups with customization form.</p>
       <div class="form-wrapper">
         <h2>Customization Form</h2>
         <!-- customization form -->
@@ -185,7 +185,7 @@
           <li><a href="https://getadblock.com/" target="_blank">getadblock.com</a></li>
           <li><a href="https://brave.com/" target="_blank">brave.com</a></li>
         </ul>
-        <p>The list is still the beginners stuff. Check <a href="https://www.privacytools.io/browsers/">privacytools.io/browsers</a> to better adjust yourself with details.</p>
+        <p>The list is still the beginners stuff. Check <a href="https://www.privacytools.io/browsers/">privacytools.io/browsers</a> to better adjust yourself with the details.</p>
       </div>
     </section>
     <footer class="grid-footer">
