Corrected wrong GPT abbreviations

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="blog-demo-gpt-s-viewability-and-impression-timing">
-  <title>A simple playground page for GPT (Google Publisher Tools) lifecycle events for display ads.</title>
+  <title>A simple playground to observe GPT's (Google Publisher Tag) slot lifecycle events.</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/main.css">
   <script async src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'></script>
@@ -61,7 +61,7 @@
     <!-- main content -->
     <main class="grid-main">
       <h1>GPT Events</h1>
-      <p>From requesting ads to counting them as impressions, <abbr title="Google Publisher Tools">GPT</abbr> library triggers various events to inform page about current slot statuses. GPT options <code>enableSingleRequest</code> and <code>enableLazyLoad</code> change event triggering times in various ways. Try different setups with customization form.</p>
+      <p>From requesting ads to counting them as impressions, <abbr title="Google Publisher Tag">GPT</abbr> library triggers various events to inform page about current slot statuses. GPT options <code>enableSingleRequest</code> and <code>enableLazyLoad</code> change event triggering times in various ways. Try different setups with customization form.</p>
       <div class="form-wrapper">
         <h2>Customization Form</h2>
         <!-- customization form -->
