Updated meta info and readme

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="blog-demo-gpt-s-viewability-and-impression-timing">
-  <title>A demo page to observe GPT's (Google Publisher Tag) slot lifecycle events.</title>
+  <meta name="description" content="A demo page to observe GPT's (Google Publisher Tag) slot lifecycle events.">
+  <title>Blog Demo | GPT's Event Lifecycle</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/main.css">
   <script async src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'></script>
@@ -19,12 +19,12 @@
     <header class="grid-header">
       <nav class="navbar">
         <div class="navbar-brand">
-          <h1><a href="./index.html" title="GPT's Event Lifecycle">GPT's Event Lifecycle</a></h1>
+          <h1><a href="./index.html" title="Blog Demo | GPT's Event Lifecycle">Blog Demo | GPT's Event Lifecycle</a></h1>
           <p>A demo page to observe GPT's slot lifecycle events.</p>
         </div>
         <ul class="navbar-items">
           <li class="navbar-item">
-            <a href="https://github.com/xkema/blog-demo-gpt-s-viewability-and-impression-timing" title="GitHub Repository">GitHub</a>
+            <a href="https://github.com/xkema/blog-demo-gpt-s-event-lifecycle" title="GitHub Repository | xkema/blog-demo-gpt-s-event-lifecycle">GitHub</a>
           </li>
           <li class="navbar-item">
             <a href="https://xkema.github.io/2020/gpt-s-event-lifecycle" title="xkema.github.io | GPT's Event Lifecycle" class="item-inverted">Blog Post</a>
@@ -166,7 +166,7 @@
       <div class="outro">
         <ul>
           <li>
-            <a href="https://github.com/xkema/blog-demo-gpt-s-viewability-and-impression-timing" title="GitHub Repository">GitHub</a>
+            <a href="https://github.com/xkema/blog-demo-gpt-s-event-lifecycle" title="GitHub Repository | xkema/blog-demo-gpt-s-event-lifecycle">GitHub</a>
           </li>
           <li>
             <a href="https://xkema.github.io/2020/gpt-s-event-lifecycle" title="xkema.github.io | GPT's Event Lifecycle">Blog Post</a>
